[package]
name = "nova-db"
version.workspace = true
edition = "2021"

[features]
# Enable additional `tracing` spans/logs for query execution.
tracing = []

[dependencies]
nova-cache = { path = "../nova-cache" }
nova-classpath = { path = "../nova-classpath" }
nova-core = { path = "../nova-core" }
nova-ids = { path = "../nova-ids" }
nova-hir = { path = "../nova-hir" }
nova-flow = { path = "../nova-flow" }
nova-index = { path = "../nova-index" }
nova-jdk = { path = "../nova-jdk" }
nova-modules = { path = "../nova-modules" }
nova-project = { path = "../nova-project" }
nova-resolve = { path = "../nova-resolve" }
nova-syntax = { path = "../nova-syntax" }
nova-types = { path = "../nova-types" }
nova-types-bridge = { path = "../nova-types-bridge" }
nova-vfs = { path = "../nova-vfs" }
parking_lot = "0.12"
ra_salsa = { package = "ra_ap_salsa", version = "0.0.269" }
tracing = "0.1"
nova-memory = { path = "../nova-memory" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
walkdir = "2"

[dev-dependencies]
bincode = "1"
criterion = "0.5"
nova-test-utils = { path = "../nova-test-utils", default-features = false }
rayon = "1"
nova-syntax = { path = "../nova-syntax", features = ["test-parse-counter"] }
serde_json = "1"
tempfile = "3"

[lib]
path = "src/lib.rs"

[[test]]
name = "typeck"
path = "tests/suite/typeck_target.rs"

[[bench]]
name = "parse_java_incremental"
harness = false
