[package]
name = "nova-decompile"
version = "0.1.0"
edition = "2021"

[dependencies]
nova-archive = { path = "../nova-archive" }
nova-cache = { path = "../nova-cache" }
nova-classfile = { path = "../nova-classfile" }
nova-core = { path = "../nova-core" }
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
