[package]
name = "nova-decompile"
version.workspace = true
edition = "2021"

[dependencies]
nova-archive = { path = "../nova-archive" }
nova-cache = { path = "../nova-cache" }
nova-classfile = { path = "../nova-classfile" }
nova-core = { path = "../nova-core" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = { workspace = true }

[dev-dependencies]
filetime = "0.2"
nova-vfs = { path = "../nova-vfs" }
tempfile = "3"
