[package]
name = "nova-ext"
version.workspace = true
edition = "2021"

[features]
wasm-extensions = [
    "dep:serde",
    "dep:serde_json",
    "dep:wasmtime",
    "dep:wat",
    "dep:semver",
    "dep:toml",
    "dep:thiserror",
]

[dependencies]
nova-config = { path = "../nova-config" }
nova-core = { path = "../nova-core" }
nova-types = { path = "../nova-types" }
nova-scheduler = { path = "../nova-scheduler" }
tracing = { workspace = true }

semver = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "1", optional = true }
toml = { version = "0.8", optional = true }
wasmtime = { version = "18.0", optional = true, default-features = false, features = ["cranelift", "runtime"] }
wat = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3"
