[package]
name = "nova-ext"
version.workspace = true
edition = "2021"

[features]
extension-bundles = [
    "dep:nova-ext-abi",
    "dep:serde",
    "dep:semver",
    "dep:toml",
    "dep:thiserror",
]
wasm-extensions = [
    "extension-bundles",
    "dep:serde_json",
    "dep:wasmtime",
    "dep:wat",
]

[dependencies]
nova-config = { path = "../nova-config" }
nova-core = { path = "../nova-core" }
nova-metrics = { path = "../nova-metrics" }
nova-types = { path = "../nova-types" }
nova-scheduler = { path = "../nova-scheduler" }
parking_lot = "0.12"
tracing = { workspace = true }

nova-ext-abi = { path = "../nova-ext-abi", optional = true }

semver = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "1", optional = true }
toml = { version = "0.8", optional = true }
wasmtime = { version = "18.0", optional = true, default-features = false, features = ["cranelift", "runtime"] }
wat = { version = "1.0", optional = true }

[dev-dependencies]
nova-db = { path = "../nova-db" }
tempfile = "3"
