[package]
name = "nova-framework-dagger"
version = "0.1.0"
edition = "2021"

[dependencies]
nova-core = { path = "../nova-core" }
nova-framework = { path = "../nova-framework" }
nova-hir = { path = "../nova-hir" }
nova-index = { path = "../nova-index" }
nova-types = { path = "../nova-types" }

[lib]
path = "src/lib.rs"

