[package]
name = "nova-framework-dagger"
version.workspace = true
edition = "2021"

[dependencies]
nova-core = { path = "../nova-core" }
nova-framework = { path = "../nova-framework" }
nova-hir = { path = "../nova-hir" }
nova-index = { path = "../nova-index" }
nova-types = { path = "../nova-types" }

[lib]
path = "src/lib.rs"

