[package]
name = "nova-framework-jpa"
version.workspace = true
edition = "2021"

[dependencies]
nova-core = { path = "../nova-core" }
nova-framework = { path = "../nova-framework" }
nova-hir = { path = "../nova-hir" }
nova-resolve = { path = "../nova-resolve" }
nova-types = { path = "../nova-types" }

tree-sitter = "0.20"
tree-sitter-java = "0.20"

regex = "1"
once_cell = "1"
zip = "0.6"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
