[package]
name = "nova-framework-jpa"
version.workspace = true
edition = "2021"

[dependencies]
nova-core = { path = "../nova-core" }
nova-framework = { path = "../nova-framework" }
nova-hir = { path = "../nova-hir" }
nova-resolve = { path = "../nova-resolve" }
nova-syntax = { path = "../nova-syntax" }
nova-types = { path = "../nova-types" }
nova-framework-parse = { path = "../nova-framework-parse" }
zip = "0.6"
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
