[package]
name = "nova-framework-lombok"
version.workspace = true
edition = "2021"

[dependencies]
nova-core = { path = "../nova-core" }
nova-framework = { path = "../nova-framework" }
nova-hir = { path = "../nova-hir" }
nova-types = { path = "../nova-types" }

[dev-dependencies]
nova-resolve = { path = "../nova-resolve" }

