[package]
name = "nova-framework-mapstruct"
version = "0.1.0"
edition = "2021"

[dependencies]
nova-apt = { path = "../nova-apt" }
nova-core = { path = "../nova-core" }
nova-framework = { path = "../nova-framework" }
nova-hir = { path = "../nova-hir" }
nova-types = { path = "../nova-types" }

tree-sitter = "0.20"
tree-sitter-java = "0.20"

[dev-dependencies]
