[package]
name = "nova-framework-mapstruct"
version.workspace = true
edition = "2021"

[dependencies]
nova-apt = { path = "../nova-apt" }
nova-core = { path = "../nova-core" }
nova-framework = { path = "../nova-framework" }
nova-hir = { path = "../nova-hir" }
nova-types = { path = "../nova-types" }
nova-framework-parse = { path = "../nova-framework-parse" }
nova-vfs = { path = "../nova-vfs" }
nova-project = { path = "../nova-project" }
tracing = { workspace = true }

tree-sitter = "0.20"

[dev-dependencies]
tempfile.workspace = true
