[package]
name = "nova-framework-quarkus"
version = "0.1.0"
edition = "2021"

[dependencies]
nova-core = { path = "../nova-core" }
nova-framework = { path = "../nova-framework" }
nova-framework-web = { path = "../nova-framework-web" }
nova-hir = { path = "../nova-hir" }
nova-properties = { path = "../nova-properties" }
nova-types = { path = "../nova-types" }
nova-yaml = { path = "../nova-yaml" }
regex = "1"
tree-sitter = "0.20"
tree-sitter-java = "0.20"
zip = "0.6"

[dev-dependencies]
pretty_assertions = "1"
