[package]
name = "nova-framework-spring"
version.workspace = true
edition = "2021"

[dependencies]
nova-core = { path = "../nova-core" }
nova-framework = { path = "../nova-framework" }
nova-hir = { path = "../nova-hir" }
nova-index = { path = "../nova-index" }
nova-build-model = { path = "../nova-build-model" }
nova-resolve = { path = "../nova-resolve" }
nova-types = { path = "../nova-types" }
nova-config-metadata = { path = "../nova-config-metadata" }
nova-properties = { path = "../nova-properties" }
nova-yaml = { path = "../nova-yaml" }
nova-framework-parse = { path = "../nova-framework-parse" }

tree-sitter = "0.20"
zip = "0.6"
tracing = { workspace = true }

[dev-dependencies]
insta = "1"
pretty_assertions = "1"
tempfile = "3"
